--- a/multseries.html
+++ b/multseries.html
@@ -1009,7 +1009,7 @@ window.addEventListener("pageshow", (e) => {
   }
 });
 </script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 </html>
 
