--- a/new.html
+++ b/new.html
@@ -284,7 +284,7 @@ document.addEventListener("DOMContentLoaded", () => loadNewItems(1));
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 
 </body>
 </html>
