--- a/profile.html
+++ b/profile.html
@@ -1137,6 +1137,6 @@ document.addEventListener("visibilitychange", () => {
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 </html>
