--- a/search.html
+++ b/search.html
@@ -220,6 +220,6 @@
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 </html>
