--- a/series.html
+++ b/series.html
@@ -1401,6 +1401,6 @@ window.addEventListener("pageshow", (e) => {
   }
 });
 </script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 </html>
