--- a/collections.html
+++ b/collections.html
@@ -77,7 +77,7 @@ const collections = [
   { name: "Обов’язкові до перегляду фільми", image: "https://i.ibb.co/PvCGhKjL/1713462630-fb1.jpg" },
   { name: "Комедії, що піднімуть настрій", image: "https://i.ibb.co/hFWBWM0v/6bbc5621a1a672e81b175a0a7a24f7f30c2851e2.jpg" },
   { name: "Адреналін і швидкість — про гонки", image: "https://i.ibb.co/F4WQK9LK/6bbc5621a1a672e81b175a0a7a24f7f30c2851e2.jpg" },
-  { name: "Фільми про танці та музику", image: "https://i.postimg.cc/PqMnpWbF/dance.jpg" },
+  { name: "Фільми про танці та музику", image: "https://i.ibb.co/JRggh25r/1713462630-fb1.jpg" },
   { name: "Новорічний і різдвяний настрій", image: "https://i.postimg.cc/KvC4ZLqm/christmas.jpg" },
   { name: "Фільми про виживання", image: "https://i.postimg.cc/4yNsfCtW/survival.jpg" },
   { name: "Історії, засновані на реальних подіях", image: "https://i.postimg.cc/JzvZbg4S/realstory.jpg" },
