--- a/collections.html
+++ b/collections.html
@@ -80,7 +80,7 @@ const collections = [
   { name: "Фільми про танці та музику", image: "https://i.ibb.co/JRggh25r/1713462630-fb1.jpg" },
   { name: "Новорічний і різдвяний настрій", image: "https://i.ibb.co/pvshtVR4/6bbc5621a1a672e81b175a0a7a24f7f30c2851e2.jpg" },
   { name: "Фільми про виживання", image: "https://i.ibb.co/rVhrhGL/1713462630-fb1.jpg" },
-  { name: "Історії, засновані на реальних подіях", image: "https://i.postimg.cc/JzvZbg4S/realstory.jpg" },
+  { name: "Історії, засновані на реальних подіях", image: "https://i.ibb.co/t10sdsf/1713462630-fb1.jpg" },
   { name: "Кіно про собак 🐾", image: "https://i.postimg.cc/8PmXvvTt/dogs.jpg" },
   { name: "Мафія, гангстери та бандити", image: "https://i.postimg.cc/pXJzY7hx/mafia.jpg" },
   { name: "Шпигуни, агенти й спецоперації", image: "https://i.postimg.cc/vmH3sWv8/spies.jpg" },
