--- a/film.html
+++ b/film.html
@@ -921,6 +921,12 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
   movieUrl   = data.stream_url   || "";
   trailerUrl = data.trailer_url  || "";
 
+  // 🔄 Автоматична заміна домену на Worker CDN
+  const WORKER_URL = "https://kino-hls.ludmila.workers.dev";  // ← твій Worker
+  movieUrl   = movieUrl.replace("https://kino-video.pages.dev", WORKER_URL);
+  trailerUrl = trailerUrl.replace("https://kino-video.pages.dev", WORKER_URL);
+
+
   // 🎛️ Кнопки
   const btnMovie   = document.getElementById("btnMovie");
   const btnTrailer = document.getElementById("btnTrailer");
