--- a/series.html
+++ b/series.html
@@ -876,7 +876,7 @@ function useSource(url) {
     document.getElementById("seriesDesc").textContent  = first.description || "Опис відсутній";
 
     // 🔄 Автоматична заміна джерела на Worker
-    const WORKER_URL = "https://kino-hls.ludmila.workers.dev";
+    const WORKER_URL = "https://kino-hls.lyuda14070702.workers.dev";
     
     data.forEach(r => {
       if (r.stream_url) {
