--- a/multseries.html
+++ b/multseries.html
@@ -652,7 +652,7 @@ function useSource(url) {
   document.getElementById("seriesDuration").textContent = first.duration || "—";
 
   // 🔄 Автоматична заміна джерела на Worker
-const WORKER_URL = "https://kino-hls.ludmila.workers.dev";
+const WORKER_URL = "https://kino-hls.lyuda14070702.workers.dev";
 
 if (first.stream_url) {
     first.stream_url = first.stream_url.replace(
