--- a/multseries.html
+++ b/multseries.html
@@ -995,9 +995,9 @@ async function loadRecommendedCartoons(title, genre) {
 }
 
 </script>
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<!-- <script src="/sw-register.js"></script> -->
 <script src="seo.js"></script>
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+
 <script src="seo.js"></script>
 
 <script>
