--- a/series.html
+++ b/series.html
@@ -1395,7 +1395,7 @@ async function loadRecommendedSeries(title, genre) {
 }
 
 </script>
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<!-- <script src="/sw-register.js"></script> -->
 <script src="seo.js"></script>
 <script>
 // 🧩 Відновлення стану після повернення з PWA
