--- a/film.html
+++ b/film.html
@@ -1334,7 +1334,8 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<!-- <script src="/sw-register.js"></script> -->
+
 <script src="seo.js"></script>
 
 <script>
