--- a/film.html
+++ b/film.html
@@ -925,7 +925,7 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
   const WORKER_URL = "https://kino-stealth.lyuda14070702.workers.dev";
   
   // filmId у тебе є в коді loadFilm()
-  movieUrl = `${WORKER_URL}/api/watch/${id}`;
+  movieUrl = `${WORKER_URL}/api/watch/${data.id}`;
 
 
 
