--- a/film.html
+++ b/film.html
@@ -922,7 +922,7 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
   trailerUrl = data.trailer_url  || "";
 
   // 🛡️ Підключаємо маскований Worker
-  const WORKER_URL = "https://kino-stealth.lyuda14070702.workers.dev";
+ const WORKER_URL = "https://kino-hls-stealth.lyuda14070702.workers.dev";
   
   // filmId у тебе є в коді loadFilm()
   movieUrl = `${WORKER_URL}/api/watch/${data.id}`;
