--- a/film.html
+++ b/film.html
@@ -921,11 +921,22 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
   movieUrl   = data.stream_url   || "";
   trailerUrl = data.trailer_url  || "";
 
-  // 🛡️ Підключаємо маскований Worker
- const WORKER_URL = "https://kino-hls-stealth.lyuda14070702.workers.dev";
-  
-  // filmId у тебе є в коді loadFilm()
+ // 🛡️ Worker тільки для моїх доменів
+const WORKER_URL = "https://kino-hls-stealth.lyuda14070702.workers.dev";
+
+const MY_DOMAINS = [
+  "kino-video.pages.dev",
+  "3bf2950b.kino-video.pages.dev"
+];
+
+// якщо ЛЮДМИЛИНО — ховаємо
+if (MY_DOMAINS.some(domain => (data.stream_url || "").includes(domain))) {
   movieUrl = WORKER_URL + "/proxy?src=" + encodeURIComponent(data.stream_url);
+} 
+// якщо ЧУЖЕ — працює напряму без Worker
+else {
+  movieUrl = data.stream_url;
+}
 
 
 
