--- a/series.html
+++ b/series.html
@@ -1075,7 +1075,17 @@ function renderEpisodes(season) {
 
   episodes.forEach((ep, idx) => {
     const WORKER_URL = "https://kino-stealth.lyuda14070702.workers.dev";
-    ep.stream_url = `${WORKER_URL}/api/watch/${ep.id}`;
+
+    const MY_DOMAINS = [
+      "kino-video.pages.dev",
+      "3bf2950b.kino-video.pages.dev"
+    ];
+    
+    if (MY_DOMAINS.some(domain => (ep.stream_url || "").includes(domain))) {
+      // якщо моє відео → через Worker
+      ep.stream_url = WORKER_URL + "/proxy?src=" + encodeURIComponent(ep.stream_url);
+    }
+
 
     const btn = document.createElement("button");
     btn.className = "ep-btn";
