--- a/multseries.html
+++ b/multseries.html
@@ -538,46 +538,95 @@ document.addEventListener("DOMContentLoaded", () => {
   let hls = null;
 
 function useSource(url) {
-  if (hls) { try { hls.destroy(); } catch (e) {} hls = null; }
+
+  // 🔥 Знищуємо попередній інстанс HLS
+  if (hls) {
+    try { hls.destroy(); } catch (e) {}
+    hls = null;
+  }
+
   try { player.pause(); } catch (e) {}
-  player.removeAttribute("src"); player.load();
+  player.removeAttribute("src");
+  player.load();
 
   if (!url) return;
 
-  // 🎬 Якщо посилання з Google Drive — використовуємо твій Cloudflare-проксі
+  // === Google Drive → твій Worker-проксі ===
   if (url.includes("drive.google.com") || url.includes("uc?export=download")) {
-    const fileIdMatch = url.match(/\/d\/([^/]+)\//);
-    const fileId = fileIdMatch ? fileIdMatch[1] : null;
+    const fileId = url.match(/\/d\/([^/]+)/)?.[1];
     if (fileId) {
       url = `https://driveproxy.lyuda14070702.workers.dev/?id=${fileId}`;
-      console.log("🎥 Проксі Google Drive:", url);
+      console.log("🎥 Google Drive через проксі:", url);
     }
   }
 
-  // 🎞️ HLS (.m3u8)
+  // === HLS (.m3u8) ===
   if (url.includes(".m3u8")) {
+
     if (window.Hls && Hls.isSupported()) {
+
       hls = new Hls({
-        maxBufferLength: 30,
+        maxBufferLength: 60,
+        maxMaxBufferLength: 120,
+        backBufferLength: 120,
+        liveSyncDurationCount: 3,
         enableWorker: true,
-        lowLatencyMode: true,
-        xhrSetup: function (xhr, url) {
+        lowLatencyMode: false,
+
+        // 🔄 Ретраї для сегментів
+        fragLoadingMaxRetry: 6,
+        fragLoadingRetryDelay: 800,
+        manifestLoadingRetryDelay: 800,
+
+        xhrSetup: (xhr) => {
           xhr.withCredentials = false;
-          xhr.setRequestHeader("Origin", "https://relax-time2.onrender.com");
-          xhr.setRequestHeader("Referer", "https://relax-time2.onrender.com");
         }
       });
+
       hls.loadSource(url);
       hls.attachMedia(player);
-    } else if (player.canPlayType("application/vnd.apple.mpegurl")) {
-      player.src = url; // Safari / iOS
-    } else {
-      console.error("Браузер не підтримує HLS без hls.js");
+
+      // ⏳ Чекаємо, поки HLS готовий
+      hls.on(Hls.Events.MANIFEST_PARSED, () => {
+        const title = document.getElementById("seriesTitle")?.textContent.trim();
+        const last = JSON.parse(localStorage.getItem("lastWatched") || "null");
+
+        if (last && last.title === title && last.time > 1) {
+          player.currentTime = last.time;
+        }
+      });
+
+      // ❤️ Автовідновлення при зависанні або падінні сегментів
+      hls.on(Hls.Events.ERROR, (ev, data) => {
+        if (data.fatal) {
+          console.warn("HLS FATAL ERROR:", data);
+
+          if (data.type === Hls.ErrorTypes.NETWORK_ERROR) {
+            hls.startLoad();
+          } 
+          else if (data.type === Hls.ErrorTypes.MEDIA_ERROR) {
+            hls.recoverMediaError();
+          } 
+          else {
+            hls.destroy();
+            hls = null;
+          }
+        }
+      });
+
+    } 
+    else if (player.canPlayType("application/vnd.apple.mpegurl")) {
+      // для iPhone
+      player.src = url;
     }
-  } else {
-    player.src = url; // mp4 або інше
+
+    return;
   }
+
+  // === mp4, webm, інші формати ===
+  player.src = url;
 }
+
 
  // ▶️ Клік на великий Play
   overlay.addEventListener("click", async ()=>{
